--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,9 @@
     <string name="my_button_text">My Button</string>
     <string name="chk_box_txt">Chk</string>
     <string name="tempStr">TempString</string>
-\    <string name="tempStr1">TempString1</string>
-\    <string name="tempStr2">TempString2</string>
-\    <string-array name="drawer_menu">
+\            <string name="tempStr1">TempString1</string>
+\            <string name="tempStr2">TempString2</string>
+\            <string-array name="drawer_menu">
         <item>Entry1</item>
         <item>Entry2</item>
         <item>Entry3</item>
@@ -21,5 +21,7 @@
     <string name="title_activity_activity_layout1">ActivityLayout1</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_main_activity2">MainActivity2</string>
 
 </resources>
