--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_main_activity2">MainActivity2</string>
+    <string name="record">Record</string>
+    <string name="description_info">DescInfo</string>
+    <string name="intro_message">IntroMsg</string>
+    <string name="stop">Stop</string>
 
 </resources>
