Basic working version
Signed-off-by: Chaitanya Ghone <csghone@ti.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">MainActivity</string>
     <string name="edit_message">Type Here</string>
-    <string name="my_button_text">My Button</string>
+    <string name="my_button_text">Set Threshold</string>
     <string name="chk_box_txt">Chk</string>
     <string name="tempStr">TempString</string>
 \            <string name="tempStr1">TempString1</string>
@@ -11,7 +11,7 @@
 \            <string-array name="drawer_menu">
         <item>Entry1</item>
         <item>Entry2</item>
-        <item>Entry3</item>
+        <item>Buzzer Game</item>
     </string-array>
 
     <color name="primary">#ffc00000</color>
