--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,9 @@
 \            <string name="tempStr1">TempString1</string>
 \            <string name="tempStr2">TempString2</string>
 \            <string-array name="drawer_menu">
-        <item>Entry1</item>
+        <item>Sensor Dump</item>
         <item>Entry2</item>
-        <item>Buzzer Game</item>
+        <item>Entry3</item>
     </string-array>
 
     <color name="primary">#ffc00000</color>
@@ -25,5 +25,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
+    <string name="StartRecording">Start Recording</string>
+    <string name="StopRecording">Recording... Press to Stop Recording</string>
 
 </resources>
